# sks_airspy_ant_community_fw

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  VERSION  ant_sdk_nrf52832.patch  diff.conf  mcuboot.conf  nrf52840_mdk_usb_dongle_nrf52840.overlay.ignore  pm_static_sks_airspy_nrf52832.yml  pm_static_sks_devel_mdk_nrf52840_nrf52840.yml  pm_static_sks_devel_sks_airspy_nrf52832.yml  prj.conf  sks_airspy_nrf52832.overlay  sks_devel_nrf52840_mdk_nrf52840.overlay
.github/workflows/: ci.yaml
ant_tpms/: CMakeLists.txt  Kconfig
ant_tpms/include/ant_profiles/tpms/: ant_tpms.h  ant_tpms_local.h  ant_tpms_utils.h
ant_tpms/include/ant_profiles/tpms/pages/: ant_tpms_pages.h
ant_tpms/lib/: ant_tpms.c
ant_tpms/lib/pages/: CMakeLists.txt  Kconfig  ant_tpms_page_1.c
ant_tpms/lib/simulator/: CMakeLists.txt  Kconfig  ant_tpms_simulator.c
ant_tpms/zephyr/: module.yml
boards/sks_airspy/: Kconfig  Kconfig.defconfig  Kconfig.sks_airspy  board.cmake  board.yml  fstab.dtsi  sks_airspy-pinctrl.dtsi  sks_airspy.dts  sks_airspy.yaml  sks_airspy_defconfig
boards/sks_devel/: index.rst
boards/sks_devel/sks_devel_nrf52840_mdk/: Kconfig  Kconfig.defconfig  Kconfig.sks_devel_nrf52840_mdk  board.yml  sks_devel_nrf52840_mdk-pinctrl.dtsi  sks_devel_nrf52840_mdk.dts  sks_devel_nrf52840_mdk.yaml  sks_devel_nrf52840_mdk_defconfig
boards/sks_devel/sks_devel_ruuvitag/: Kconfig  Kconfig.defconfig  Kconfig.sks_devel_ruuvitag  board.yml  sks_devel_ruuvitag.dts  sks_devel_ruuvitag.yaml  sks_devel_ruuvitag_defconfig
boards/sks_devel/sks_devel_sks_airspy/: Kconfig  Kconfig.defconfig  Kconfig.sks_devel_sks_airspy  board.yml  fstab.dtsi  sks_devel_sks_airspy-pinctrl.dtsi  sks_devel_sks_airspy.dts  sks_devel_sks_airspy.yaml  sks_devel_sks_airspy_defconfig
boards/sks_devel_nrf52840_mdk/: Kconfig  Kconfig.defconfig  Kconfig.sks_devel_nrf52840_mdk  board.cmake  board.yml  fstab.dtsi  sks_devel_nrf52840_mdk-pinctrl.dtsi  sks_devel_nrf52840_mdk.dts  sks_devel_nrf52840_mdk.yaml  sks_devel_nrf52840_mdk_defconfig
child_image/: mcuboot.conf
doc/: ANT_TPMS_profile.md  HARDWARE_PROTO.md  INSTALL.md  pogo_programmer_clip_01.stl
doc/stlink_bmdb_firmware/: README.md  blackmagic_stlink_bootloader_bmdb_boot.hex  blackmagic_stlink_firmware_st_boot.hex  blackmagic_stlink_firmware_uart_rtt_bmdb_boot.hex
doc/tools/: karoo_analysis.ipynb  requirements.txt
dts/bindings/: wake-signal-pin.yaml
include/: ant.h  bluetooth.h  com.h  common.h  decoder.h  sensor.h  settings.h  spi.h  zbus_com.h
include/ant_profiles/common/pages/: ant_common_page_82.h
include/ant_profiles/tpms/: ant_tpms.h  ant_tpms_common_types.h  ant_tpms_local.h  ant_tpms_utils.h
include/ant_profiles/tpms/pages/: ant_tpms_page_1.h  ant_tpms_page_16.h  ant_tpms_pages.h
include/ant_profiles/tpms/simulator/: ant_tpms_simulator.h  ant_tpms_simulator_local.h
src/: ant.c  bluetooth.c  com.c  common.c  decoder.c  main.c  retained.c  sensor.c  settings.c  spi.c  zbus_com.c
src/ant_profiles/ant_common/pages/: ant_common_page_82.c
src/ant_profiles/ant_tpms/: ant_tpms.c
src/ant_profiles/ant_tpms/pages/: ant_tpms_page_1.c  ant_tpms_page_16.c
src/ant_profiles/ant_tpms/simulator/: ant_tpms_simulator.c
src/ant_tpms/: ant_tpms.c
src/ant_tpms/pages/: ant_tpms_page_1.c
